--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,3 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"/>
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/score"
+        android:checkable="false"
+        android:title="0 Pts"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/heart3"
+        android:icon="@drawable/red_heart"
+        android:title="Item"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/heart2"
+        android:icon="@drawable/red_heart"
+        android:title="Item"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/heart1"
+        android:icon="@drawable/red_heart"
+        android:title="Heart1"
+        app:showAsAction="always" />
+</menu>
