Ajout langue anglais

--- a/app/src/main/res/layout/activity_loose.xml
+++ b/app/src/main/res/layout/activity_loose.xml
@@ -77,7 +77,7 @@
                         android:id="@+id/NameInput"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="Votre Nom..."
+                        android:hint="@string/YourName"
                         android:singleLine="true"
                         android:textSize="48sp"
                         app:layout_constraintBottom_toBottomOf="parent"
